// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MdxcAsset should parse markdown correctly. 1`] = `
Array [
  Object {
    "type": "js",
    "value": "import React, { createElement, createFactory } from 'react'
import Mdx from \\"./index.md\\";
export default function({ factories={} }) {
  const {
    p = createFactory('p'),
    wrapper = createFactory('div'),
  } = factories

  return wrapper({},

p({},
  \\"import React from \\\\\\"react\\\\\\";\\\\nimport ReactDOM from \\\\\\"react-dom\\\\\\";\\",
),
p({},
  \\"ReactDOM.render(\\\\n  \\",
  createElement(\\"h1\\", null,
    \\"\\\\n    \\",
    createElement(Mdx, null),
    \\"Garwacke\\\\n  \\",
  ),
  \\",\\\\n  document.querySelector(\\\\\\"#root\\\\\\")\\\\n);\\",
)

  )
}
",
  },
]
`;

exports[`MdxcAsset should parse markdown with images correctly. 1`] = `
Array [
  Object {
    "type": "js",
    "value": "import React, { createElement, createFactory } from 'react'

export default function({ factories={} }) {
  const {
    h1 = createFactory('h1'),
    h2 = createFactory('h2'),
    img = createFactory('img'),
    p = createFactory('p'),
    wrapper = createFactory('div'),
  } = factories

  return wrapper({},

h1({\\"id\\": \\"Test\\"},
  \\"Test\\",
),
h2({\\"id\\": \\"H2\\"},
  \\"H2\\",
),
p({},
  img({\\"src\\": \\"./img.jpg\\", \\"alt\\": \\"\\"}),
)

  )
}
",
  },
]
`;
